[Mac] Update touch bar controls in each page load update

Update the back/forward and star items in the touch bar when the
page load state is updated.

Bug: 763730
Change-Id: I77da6d9546e02c98ec1e8a2d65315e711bf74a03
Reviewed-on: https://chromium-review.googlesource.com/661055
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501019}
Former-commit-id: f508048a1ba16a303adf5338491d9e92edffcda9